--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>A history of browsers</title>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
