Creates three-column layout.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 <body>
   <h1>A history of browsers</h1>
 
-  <h2>Table of Contents</h2>
-  <ul>
-    <li><a href="#introduction">Introduction</a></li>
-    <li><a href="#ie">A brief history of IE</a></li>
-    <li><a href="#firefox">A brief history of Firefox</a></li>
-    <li><a href="#chrome">A brief history of Chrome</a></li>
-  </ul>
+  <nav>
+    <span>
+      <a href="#introduction">Introduction</a>
+    </span>
+    <span>
+      <a href="#ie">A brief history of IE</a>
+    </span>
+    <span>
+      <a href="#firefox">A brief history of Firefox</a>
+    </span>
+    <span>
+      <a href="#chrome">A brief history of Chrome</a>
+    </span>
+  </nav>
 
   <section id="introduction">
     <h2>Introduction</h2>
@@ -28,7 +35,7 @@
     </p>
   </section>
 
-  <section id="ie">
+  <section id="ie" class="browser">
     <h2>A brief history of IE</h2>
     <img src="http://upload.wikimedia.org/wikipedia/en/1/10/Internet_Explorer_7_Logo.png" />
     <p>
@@ -39,7 +46,7 @@
     </p>
   </section>
 
-  <section id="firefox">
+  <section id="firefox" class="browser">
     <h2>A brief history of Firefox</h2>
     <img src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" />
     <p>
@@ -50,7 +57,7 @@
     </p>
   </section>
 
-  <section id="chrome">
+  <section id="chrome" class="browser">
     <h2>A brief history of Chrome</h2>
     <img src="http://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" />
     <p>
