--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <title>A history of browsers</title>
   <link rel="stylesheet" href="style.css">
@@ -28,7 +28,7 @@
 
   <section id="ie">
     <h2>A brief history of IE</h2>
-    <img src="http://upload.wikimedia.org/wikipedia/en/1/10/Internet_Explorer_7_Logo.png" />
+    <img src="http://upload.wikimedia.org/wikipedia/en/1/10/Internet_Explorer_7_Logo.png" alt="Internet Explorer logo"/>
     <p>
       The first <a href="http://windows.microsoft.com/en-US/internet-explorer/download-ie">Internet Explorer</a> was derived from Spyglass Mosaic. The original Mosaic came from NCSA, but since NCSA was a public entity it relied on Spyglass as its commercial licensing partner. Spyglass in turn delivered two versions of the Mosaic browser to Microsoft, one wholly based on the NCSA source code, and another engineered from scratch but conceptually modeled on the NCSA browser. Internet Explorer was initially built using the Spyglass, not the NCSA source code. The license to Microsoft provided Spyglass (and thus NCSA) with a quarterly fee plus a percentage of Microsoft's revenues for the software.
     </p>
@@ -39,7 +39,7 @@
 
   <section id="firefox">
     <h2>A brief history of Firefox</h2>
-    <img src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" />
+    <img src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" alt="Firefox logo" />
     <p>
       The project which became <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> started as an experimental branch of the Mozilla Suite called m/b (or mozilla/browser). After it had been sufficiently developed, binaries for public testing appeared in September 2002 under the name Phoenix.
     </p>
@@ -50,7 +50,7 @@
 
   <section id="chrome">
     <h2>A brief history of Chrome</h2>
-    <img src="http://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" />
+    <img src="http://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" alt="Chrome logo" />
     <p>
       Google's Eric Schmidt opposed the development of an independent web browser for six years. He stated that "at the time, Google was a small company," and he did not want to go through "bruising browser wars." After co-founders Sergey Brin and Larry Page hired several Mozilla Firefox developers and built a demonstration of <a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>, however, Schmidt admitted that "It was so good that it essentially forced me to change my mind."
     </p>
